fix gap between navlink and dropdown

--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -134,11 +134,9 @@
   transform: scale(1.04);
   color: rgba(28, 61, 90, 0.95);
   border-bottom: 2px solid rgba(28, 61, 90, 0.8);
-  padding-bottom: 0.125rem;
 }
 
 .navLink.active {
-  border-bottom: 2px solid rgba(28, 61, 90, 0.8);
   padding-bottom: 0.125rem;
   color: rgba(28, 61, 90, 0.95);
 }
